--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.5/bin/python3",
+  "python.pythonPath": "/usr/local/bin/python3",
   "python.linting.pylintEnabled": false
 }
