--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,25 @@
-Flask==0.12.2
-requests==2.18.1
-pyrebase==3.0.27
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
+Flask==1.0.2
+gcloud==0.17.0
+googleapis-common-protos==1.5.5
+httplib2==0.12.0
+idna==2.7
+itsdangerous==1.1.0
+Jinja2==2.10
+jws==0.1.3
+MarkupSafe==1.1.0
+oauth2client==3.0.0
+protobuf==3.6.1
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pycryptodome==3.4.3
+Pyrebase==3.0.27
+python-jwt==2.0.1
+requests==2.11.1
+requests-toolbelt==0.7.0
+rsa==4.0
+six==1.11.0
+urllib3==1.24.1
+Werkzeug==0.14.1
